# cyc-gbm

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
config/: real_data_config.yaml  simulation_config.yaml
config/cas_data_study/: master_config.yaml
config/real_run/: master_config.yaml
config/simulation_run/: master_config.yaml
config/simulation_study/: master_config.yaml
config/ssrn_paper/: simulation_config.yaml
cyc_gbm/: boosting_tree.py  cyc_gbm.py  gbm_tree.py
cyc_gbm/utils/: convert_data.py  distributions.py  fix_datatype.py  tune_kappa.py  tuning.py  utils.py
notebooks/: check_results.ipynb  dist.ipynb  play.ipynb  simulated_data.ipynb  simulated_data_with_weights.ipynb  simulation_study.ipynb  simulation_study_with_weights.ipynb  verify_cyc_gbm_loss.ipynb  verify_cyc_gbm_results.ipynb  verify_cyc_gbm_tuning.ipynb
numerical_illustration/: __main__.py  baseline_models.py  demo_config.yaml  numerical_illustration.py  prepare_real_data.py
numerical_illustration/config/: beta_prime.yaml  config_models.py  demo_config.yaml  gamma.yaml  gaussian.yaml  inverse_gaussian.yaml  large_config.yaml  neg_bin.yaml  real_data_config.yaml  simulation_config.yaml
numerical_illustration/configs/: beta_prime.yaml  demo_config.yaml  gamma.yaml  gamma_shape_rate.yaml  gaussian.yaml  inverse_gaussian.yaml  neg_bin.yaml  real_gamma.yaml  real_neg_bin.yaml
numerical_illustration/plots/: __init__.py  binned_response_plot.py  concentration_config.py  concentration_curve_plot.py  concentration_tikz_writer.py  config.py  tikz_writer.py
src/: CycGBM.py  Distribution.py  GradientBoostingMachine.py  UniGBM.py  cyc_gbm.py  distribution.py  distributions.py  exceptions.py  uni_gbm.py  utils.py
tests/: CycGBMTest.py  UniGBMTest.py  cyc_gbm_tests.py  gbm_tests.py  test_cyc_gbm.py  uni-gbm-test.py
(+49 files in other folders)
